# AILabs

./: Setup_Lab16.fish  Setup_Lab17.fish  Setup_Lab21.fish  Setup_Lab22.fish  Setup_Lab24.fish
016_Fundamentals/: Linear_Regression.ipynb  PhishingModel.ipynb
017_SupervisedLearning/: Supervised_Learning.ipynb
021_NeuralNetworks/: pyproject.toml
