[tool.poetry]
name = "ailabs-021-neuralnets"
version = "0.1.0"
description = ""
authors = ["Joff Thyer <joff@blackhillsinfosec.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"  # safer for TensorFlow Apple Silicon builds
jupyter = "^1.1.1"
numpy = "<2.0"  # prevent binary incompatibilities
pandas = "^2.2.3"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
scikit-learn = "^1.5.2"
tensorflow-macos = "^2.18.0"
tensorflow-metal = "^1.1.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"
